--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="infos">
                     <img class="foto-canal" src="./assets/images/Channel_Avatar.png" alt="imagem do canal">
                     <div>
-                        <p class="nome-canal">DIO</p>
+                        <p class="nome-canal"><strong>DIO</strong></p>
                         <p class="inscritos">83,3 mil inscritos</p>
                     </div>
                 </div>
@@ -69,6 +69,80 @@
             <section class="container-descricao">
                 <span class="texto-descricao">Inicie uma aventura imersiva no mundo do Front-end com HTML e CSS. Para isso, criaremos uma landing page com a temática da série Stranger Things, a qual contará com a implementação de um theme switcher (light e dark) para explorarmos os mistérios do mundo invertido.</span>
             </section>
+        </div>
+        <div class="container-aside">
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar1.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Geração Tech Unimed - BH - Ciência de Dados</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar2.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">1,6 mil visualizações Transmitido há 3 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar3.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Machine Learning Avançado - Fast Track</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">1,7 mil visualizações Transmitido há 4 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar4.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Global Skills #2 - Project Planning</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">971 visualizações Transmitido há 5 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar5.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar1.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar2.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar3.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
+            <div class="aside-item">
+                <img src="./assets/images/Thumb_sidebar4.png" alt="vídeo no sidebar">
+                <div class="infos-aside-video">
+                    <p class="titulo-aside">Scrum talks</p>
+                    <p class="texto-aside-nome">DigitalInnovationOne</p>
+                    <p class="texto-aside-metrica">2,1 mil visualizações Transmitido há 2 dias</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
